--- a/assets/css/toaster.css
+++ b/assets/css/toaster.css
@@ -13,7 +13,7 @@
     position: fixed;
     top: 20px;
     right: 20px;
-    z-index: 1100;
+    z-index: 999999;
     display: flex;
     flex-direction: column;
     gap: 10px;
